# QVoteCount

./: .gitignore  LastSession.session  Main.py  MergeDbs.py  README.md  pyproject.toml  requirements.txt  test_db.py
Database/: core.py  datastream.py  logger.py  tools.py  uadatabase.py
Database/engine/: pgsqlengine.py  sqlite.py  storageengine.py
Engine/: App.py  Console.py  ContainerView.py  Environment.py  MainWindow.py  Message.py  Network.py  QtDataStream.py  QtUIWrapper.py  SecureNetwork.py  StartQuitAssistant.py  Synchronisation.py  UI.py  VirtualDatabase.py
Src/: AppManager.py  Apps.py  DatabaseManager.py  DbConfig.py  MainManager.py  MainWindow.py  __init__.py  report.jinja  report_template.py
Src/templates/: report.html
